examples/error/failReturnTyoe.k
@Use("java")
public integer getAge() {
    return "Dez"; // Erro: String não é Integer
}

@Use("java")
public void main() {
    getAge();
    return;
}